--- a/Sicsoft.Checkin.Web/Pages/Bitacora/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bitacora/Index.cshtml
@@ -150,6 +150,8 @@
                             <tr>
                                 <th>Código</th>
                                 <th>Descripción</th>
+                                <th>Stack</th>
+
                                 <th>Fecha</th>
 
                             </tr>
@@ -160,6 +162,8 @@
                                 <tr>
                                     <td>@item.id</td>
                                     <td>@item.Descripcion</td>
+                                    <td>@item.StackTrace</td>
+
                                     <td>@item.Fecha</td>
 
                                 </tr>
@@ -171,6 +175,8 @@
                             <tr>
                                 <th>Código</th>
                                 <th>Descripción</th>
+                                <th>Stack</th>
+
                                 <th>Fecha</th>
 
                             </tr>
