--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -873,7 +873,94 @@
             </div>
         </div>
     </div>
+    @if (!string.IsNullOrEmpty(Roles.Where(a => a == "56").FirstOrDefault()))
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h5 class="title">Histórico de Llamada</h5>
+                            </div>
 
+                            <div class="col-sm-6" style="text-align: right">
+
+                                
+
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label># Factura de Venta:</label>
+                                    <input type="text" class="form-control form-control-lg" id="cardcode1" asp-for="Historico.Historico.FirstOrDefault().Factura" readonly>
+
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Fecha de Venta:</label>
+                                    <input   class="form-control form-control-lg" id="cardcode1" asp-for="Historico.Historico.FirstOrDefault().Fecha_Factura" readonly>
+
+                                </div>
+                            </div>
+                            @using System.Globalization;
+                            @{
+                                NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
+                                formato.CurrencyGroupSeparator = ",";
+                                formato.NumberDecimalSeparator = ".";
+
+
+                            }
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Inversión en Reparaciones:</label>
+                                    <br>
+                                    <label><b>@Model.Historico.Historico.FirstOrDefault().Total_Revisiones.ToString("N", formato)</b></label> 
+
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Fecha Ult. Revisión:</label>
+                                    <input   class="form-control form-control-lg" id="cardcode1" asp-for="Historico.Historico.FirstOrDefault().fecha_Ultima_Rev" readonly>
+
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Total de Revisiones:</label>
+                                    <input   class="form-control form-control-lg" id="cardcode1" asp-for="Historico.Historico.FirstOrDefault().Cantidad_Revisiones" readonly>
+
+                                </div>
+                            </div>
+
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Ult. Técnico:</label>
+                                    <input class="form-control form-control-lg" id="cardcode1" asp-for="Historico.Historico.FirstOrDefault().Ultimo_Tecnico" readonly>
+
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Observaciones Ult. Reparación:</label>
+                                    <textarea  class="form-control form-control-lg"  asp-for="Historico.Historico.FirstOrDefault().Obse_Ultima_Repara" readonly > </textarea>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+   
 
     <div class="row">
         <div class="col-md-12">
